Download quarkus recipe file only on demand